--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@ display: d-block
          <h3 data-aos="fade-up" class="col-12 col-md-11 fs-6 text-white fw-bold offset-md-1 mb-5">01 JUN - 31 OCT</h3>
          <div class="col-12 offset-md-1 d-flex">
            <a href="#" data-aos="fade-up" data-aos-duration="1600" class="btn btn-secondary me-2 w-50 w-md-auto">購買票券</a>
-           <a href="#" data-aos="fade-up" data-aos-duration="1600" class="btn text-white border border-1 border-white w-50 w-md-auto" role="button">詳細資訊</a>
+           <a href="detail.html" data-aos="fade-up" data-aos-duration="1600" class="btn text-white border border-1 border-white w-50 w-md-auto" role="button">詳細資訊</a>
          </div>
        </div>
      </div>
@@ -31,7 +31,7 @@ display: d-block
          <a class="nav-link text-dark" href="#">戲劇</a>
        </li>
       <li class="nav-item y-4 px-3 navBar-1">
-         <a class="nav-link text-dark" href="#">設計</a>
+         <a class="nav-link text-dark" href="product.html">設計</a>
        </li>
       <li class="nav-item y-4 px-3 navBar-1">
          <a class="nav-link text-dark" href="#">藝術</a>
@@ -61,7 +61,7 @@ display: d-block
      <nav class="container nav" aria-label="Secondary navigation">
        <a class="nav-link active navBar-1 d-block" aria-current="page" href="#">音樂</a>
        <a class="nav-link navBar-1 d-block" href="#">戲劇</a>
-       <a class="nav-link navBar-1 d-block" href="#">設計</a>
+       <a class="nav-link navBar-1 d-block" href="product.html">設計</a>
        <a class="nav-link navBar-1 d-block" href="#">藝術</a>
        <a class="nav-link navBar-1 d-block" href="#">美食</a>
        <a class="nav-link navBar-1 d-block" href="#">旅遊</a>
@@ -72,7 +72,7 @@ display: d-block
     </section>
 
 <div class="container">
-  <h2 class="fs-3 fw-bold mt-9 mb-6">熱門特展</h2>
+  <h2 class="fs-3 fw-bold mt-10 mb-6">熱門特展</h2>
   <div class="card mb-5 bg-light border-0 rounded-0">
     <div class="row g-0">
       <div class="col-md-4" data-aos="fade-right" data-aos-duration="1200">
@@ -100,7 +100,7 @@ display: d-block
               <div class="col-md-11">
                 <ul class="list-unstyled d-flex">
                   <li><a href="#" class="btn btn-primary me-2">購買票券</a></li>
-                  <li><a href="#" class="btn btn-outline-primary">購買票券</a></li>
+                  <li><a href="#" class="btn btn-outline-primary">收藏展覽</a></li>
                 </ul>
               </div>
               <div class="col-md-1 g-0 d-none d-md-block">
@@ -139,7 +139,7 @@ display: d-block
               <div class="col-md-11">
                 <ul class="list-unstyled d-flex">
                   <li><a href="#" class="btn btn-primary me-2">購買票券</a></li>
-                  <li><a href="#" class="btn btn-outline-primary">購買票券</a></li>
+                  <li><a href="#" class="btn btn-outline-primary">收藏展覽</a></li>
                 </ul>
               </div>
               <div class="col-md-1 g-0 d-none d-md-block">
@@ -178,7 +178,7 @@ display: d-block
               <div class="col-md-11">
                 <ul class="list-unstyled d-flex">
                   <li><a href="#" class="btn btn-primary me-2">購買票券</a></li>
-                  <li><a href="#" class="btn btn-outline-primary">購買票券</a></li>
+                  <li><a href="#" class="btn btn-outline-primary">收藏展覽</a></li>
                 </ul>
               </div>
               <div class="col-md-1 g-0 d-none d-md-block">
@@ -194,7 +194,7 @@ display: d-block
  <!-- Live review -->
 
  <div class="container">
-  <h2 class="fs-3 fw-bold mt-9 mb-6">直播回顧</h2>
+  <h2 class="fs-3 fw-bold mt-10 mb-6">直播回顧</h2>
   <div class="row mb-5 bg-light border-0 rounded-0 bgCoverCenter" style="height:482px; background-image:url('https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/people2.png');">
 
       <div class="col-md-5 ps-0 g-0">
