--- a/app/checkout-4.html
+++ b/app/checkout-4.html
@@ -77,7 +77,7 @@ display: d-none
         </div>
         <div class="col-6">
           <div class="d-grid gap-2">
-            <a class="btn btn-lg btn-secondary fs-8" type="button" href="#">看展去</a> <!--product.html TBD-->
+            <a class="btn btn-lg btn-secondary fs-8" type="button" href="product.html">看展去</a> <!--product.html TBD-->
           </div>
         </div>
       </div>
