--- a/app/index.html
+++ b/app/index.html
@@ -76,9 +76,9 @@ display: d-block
   <div class="card mb-5 bg-light border-0 rounded-0">
     <div class="row g-0">
       <div class="col-md-4" data-aos="fade-right" data-aos-duration="1200">
-        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fluid h-100 " alt="exhibition-img">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fluid" alt="exhibition-img">
       </div>
-      <div class="col-md-8 d-flex justify-content-between pt-8 px-2 px-md-6 ">
+      <div class="col-md-8 d-flex justify-content-between pt-4 px-2 px-md-6 ">
         <div class="row card-body p-0 p-md-3">
           <div class="col-12">
             <div class="row d-flex justify-content-between">
@@ -115,9 +115,9 @@ display: d-block
   <div class="card mt-1 mb-5 bg-light border-0 rounded-0">
     <div class="row g-0">
       <div class="col-md-4" data-aos="fade-left" data-aos-duration="1200">
-        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg" class="img-fluid h-100 " alt="exhibition-img">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/michel-catalisano--a0D9LpcKV8-unsplash.jpg" class="img-fluid" alt="exhibition-img">
       </div>
-      <div class="col-md-8 d-flex justify-content-between pt-8 px-2 px-md-6 ">
+      <div class="col-md-8 d-flex justify-content-between pt-4 px-2 px-md-6 ">
         <div class="row card-body p-0 p-md-3">
           <div class="col-12">
             <div class="row d-flex justify-content-between">
@@ -154,9 +154,9 @@ display: d-block
   <div class="card mt-1 mb-5 bg-light border-0 rounded-0">
     <div class="row g-0">
       <div class="col-md-4" data-aos="fade-right" data-aos-duration="1200">
-        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg" class="img-fluid h-100 " alt="exhibition-img">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/exhibition-week6/moralis-tsai-8xsktFRw28I-unsplash.jpg" class="img-fluid" alt="exhibition-img">
       </div>
-      <div class="col-md-8 d-flex justify-content-between pt-8 px-2 px-md-6 ">
+      <div class="col-md-8 d-flex justify-content-between pt-4 px-2 px-md-6 ">
         <div class="row card-body p-0 p-md-3">
           <div class="col-12">
             <div class="row d-flex justify-content-between">
